@@ -4,7 +4,7 @@
 
 PKGNAME="KKEdit"
 TARNAME="$PKGNAME"
-VERSION="0.1.6"
+VERSION="0.1.7"
 BUILD=5
 SECTION="DESKTOP"
 SUFFIX="LFSPKG"
