@@ -1,5 +1,6 @@
 0.1.7
-When moving multiple lines up/down selections is extended to whole lines.
+Added 'Open' to tab menu to open files in current dirctory.
+When moving multiple lines up/down selection is extended to whole lines.
 Status bar now doesn't show '(null)' if no syntax highlighting or filepath.
 Added more shortcuts.
 Update status bar on tab switch.
